--- a/src/plone/app/mosaic/browser/static/scss/mosaic.authoring.tiles.scss
+++ b/src/plone/app/mosaic/browser/static/scss/mosaic.authoring.tiles.scss
@@ -43,7 +43,7 @@
 .mosaic-panel .mosaic-rich-text-toolbar{
     position: absolute;
     margin-top: -40px;
-    z-index:50;
+    z-index:150;
     .mce-menu {
         top: 34px!important;
     }
